# reqsmith

./: AGENT.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
docs/ai/plans/: plan-001-high-level.md  plan-002-implementation.md
docs/ai/status/: phase-0-complete.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/reqif/: mod.rs  model.rs
tests/fixtures/: small.reqif
