[package]
name = "reqsmith"
version = "0.1.0"
description = "Modern ReqIF requirements management tool"
authors = ["ReqSmith Contributors"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reqsmith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XML parsing and serialization
quick-xml = "0.36"

# Error handling
thiserror = "1"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Future dependencies (commented for now)
# tantivy = "0.22"  # Full-text search
# petgraph = "0.6"  # Graph algorithms
# zip = "2"         # .reqifz support

